# path_planner_3d

./: .gitignore  CMakeLists.txt  package.xml
definition/sim/: kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_velodyne.urdf.xacro
examples/: obstacle_detector.cpp  obstacle_detector.h
include/path_planner_3d/: csv2Octomap.h  frontier_explorer.h  frontier_path_executer.h  kobuki_controller.h  path_planner.h  rrtstar.h
launch/: navigation.launch  octomap_mapping.launch  path_planner_3d.launch  sim_3d_ptmr.launch  sim_mapping_rm.launch  slam_mapping.launch
launch/includes/: robot.launch.xml  robot_velodyne.launch.xml
mapas_generados/mapa_2/: map.pgm
mapas_generados/mapa_3/: map.pgm  map.yaml
maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml
maps/csv/: map5.csv
maps/octomap/: map1.bt  map1.ot  map2.bt  map2.ot  map3.bt  map3.ot
src/: csv2Octomap.cpp  fake_localization_node.cpp  frontier_explorer.cpp  frontier_path_executer.cpp  kobuki_controller.cpp  path_planner.cpp  rrtstar.cpp  testParser.cpp
worlds/: map2.world  map3.world  map4.world  map5.world  map6.world
