<?xml version="1.0"?>
<package format="2">
  <name>path_planner_3d</name>
  <version>0.0.0</version>
  <description>The path_planner_3d package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgines@todo.todo">jgines</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>octomap</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
